--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,3 +73,16 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header{
+    background-color: $background-dark;
+    .close {
+        color: $background-pale;
+    }
+    .modal-title {
+        color: white;
+    }
+}
+.modal-body{
+    background-color: $background-pale;
+}
